改一下目录和属性名

--- a/src/main/resources/pages/back/login.html
+++ b/src/main/resources/pages/back/login.html
@@ -103,7 +103,7 @@
                     layer.msg("成功");
                     window.location.href = "/back/index.html";
                 } else {
-                    layer.msg(data.message);
+                    layer.msg(data.msg);
                 }
             },
             error: function () {
