--- a/src/main/resources/pages/back/user.html
+++ b/src/main/resources/pages/back/user.html
@@ -140,7 +140,9 @@
 <!--comment.js-->
 <script type="text/javascript" src="/js/common.js"></script>
 <script type="text/javascript">
-
+    $(".ui.dropdown").dropdown({
+        on: "hover"
+    });
     $(function () {
         getUserInfo();
     });
