--- a/src/main/resources/pages/back/blog-input.html
+++ b/src/main/resources/pages/back/blog-input.html
@@ -226,6 +226,9 @@
 <script type="text/javascript" src="/js/blogInput.js"></script>
 <script type="text/javascript">
 
+    $(".ui.dropdown").dropdown({
+        on: "hover"
+    });
     $(function () {
         getUserInfo();
         init();
@@ -254,11 +257,11 @@
             url: "/types",
             type: "GET",
             async: false,
-            success: function (data) {
+            success: function (result) {
                 layer.closeAll();
-                if (data.code === 200) {
+                if (result.code === 200) {
                     var typeContent = "";
-                    $.each(data.obj, function (index, val) {
+                    $.each(result.data, function (index, val) {
                         typeContent +=
                             '<div class="item" data-value="'
                             + val.id
@@ -268,7 +271,7 @@
                     });
                     $('#typeContent').html(typeContent);
                 } else {
-                    layer.msg(data.message);
+                    layer.msg(result.msg);
                 }
             },
             error: function (obj) {
@@ -281,11 +284,11 @@
             url: "/tags",
             type: "GET",
             async: false,
-            success: function (data) {
+            success: function (result) {
                 layer.closeAll();
-                if (data.code === 200) {
+                if (result.code === 200) {
                     let tagContent = "";
-                    $.each(data.obj, function (index, val) {
+                    $.each(result.data, function (index, val) {
                         tagContent +=
                             '<div class="item" data-value="'
                             + val.id
@@ -295,7 +298,7 @@
                     });
                     $('#tagContent').html(tagContent);
                 } else {
-                    layer.msg(data.message);
+                    layer.msg(result.msg);
                 }
             },
             error: function (obj) {
@@ -309,12 +312,12 @@
         $.ajax({
             url: "/blogs/" + id,
             type: "GET",
-            success: function (data) {
+            success: function (result) {
                 layer.closeAll();
-                if (data.code === 200) {
-                    setBlog(data.obj);
+                if (result.code === 200) {
+                    setBlog(result.data);
                 } else {
-                    layer.msg(data.message);
+                    layer.msg(result.msg);
                 }
             },
             error: function (obj) {
