--- a/src/main/resources/pages/back/blogs.html
+++ b/src/main/resources/pages/back/blogs.html
@@ -205,16 +205,18 @@
         init();
         getPage(1);
     });
-
+    $(".ui.dropdown").dropdown({
+        on: "hover"
+    });
     function init() {
         $.ajax({
             url: "/types",
             type: "GET",
-            success: function (data) {
+            success: function (result) {
                 layer.closeAll();
-                if (data.code === 200) {
+                if (result.code === 200) {
                     var typeContent = '<div  class="item" className="' + 'item" data-value="' + '">全部</div>';
-                    $.each(data.obj, function (index, val) {
+                    $.each(result.data, function (index, val) {
                         typeContent +=
                             '<div class="item" data-value="'
                             + val.id
@@ -224,7 +226,7 @@
                     });
                     $('#typeContent').html(typeContent);
                 } else {
-                    layer.msg(data.message);
+                    layer.msg(result.msg);
                 }
             },
             error: function (obj) {
@@ -247,12 +249,12 @@
             url: "/admin/blogs?page=" + current + "&pageSize=6",
             type: "GET",
             data: queryData,
-            success: function (data) {
+            success: function (result) {
                 layer.closeAll();
-                if (data.code === 200) {
-                    setPage(data.obj);
+                if (result.code === 200) {
+                    setPage(result.data);
                 }
-                layer.msg(data.message);
+                layer.msg(result.msg);
             },
             error: function (obj) {
                 layer.closeAll();
@@ -341,21 +343,19 @@
 
     /*!!!!二次确认提示框!!!*/
     function go(id) {
-        // /*<![CDATA[*/
         let url = "/admin/blogs/" + id;
-        // /*]]>*/
         $(".ui.modal").modal({ //各种回调方法
             onApprove: function () { //单击确认按钮
                 $.ajax({
                     url: url,
                     type: "DELETE",
                     async: false,
-                    success: function (data) {
+                    success: function (result) {
                         layer.closeAll();
-                        if (data.code === 204) {
+                        if (result.code === 204) {
                             $('.blogLine' + id).toggleClass("no");
                         }
-                        layer.msg(data.message);
+                        layer.msg(result.msg);
                     },
                     error: function (obj) {
                         layer.closeAll();
