--- a/src/main/resources/pages/back/types-input.html
+++ b/src/main/resources/pages/back/types-input.html
@@ -124,7 +124,9 @@
 <!--comment.js-->
 <script type="text/javascript" src="/js/common.js"></script>
 <script type="text/javascript">
-
+    $(".ui.dropdown").dropdown({
+        on: "hover"
+    });
 
     $(function () {
         getUserInfo();
@@ -142,12 +144,12 @@
                 url: "/admin/types/"+id,
                 type: "GET",
                 async: false,
-                success: function (data) {
+                success: function (result) {
                     layer.closeAll();
-                    if (data.code === 200) {
-                        $('#typeName').val(data.obj.name);
+                    if (result.code === 200) {
+                        $('#typeName').val(result.data.name);
                     } else {
-                        layer.msg(data.message);
+                        layer.msg(result.msg);
                     }
                 },
                 error: function (obj) {
@@ -184,9 +186,9 @@
             dataType: "json",
             contentType: "application/json;charset=UTF-8",
             async: false,
-            success: function (data) {
+            success: function (result) {
                 layer.closeAll();
-                    layer.msg(data.message);
+                    layer.msg(result.msg);
             },
             error: function (obj) {
                 console.log("error");
@@ -210,13 +212,13 @@
             dataType: "json",
             contentType: "application/json;charset=UTF-8",
             async: false,
-            success: function (data) {
+            success: function (result) {
                 layer.closeAll();
-                if (data.code === 201) {
-                    layer.msg(data.message);
+                if (result.code === 201) {
+                    layer.msg(result.msg);
                     $("#typeName").val('');
                 } else {
-                    layer.msg(data.message);
+                    layer.msg(result.msg);
                 }
             },
             error: function (obj) {
