--- a/src/main/resources/pages/back/user-input.html
+++ b/src/main/resources/pages/back/user-input.html
@@ -140,7 +140,9 @@
 <!--comment.js-->
 <script type="text/javascript" src="/js/common.js"></script>
 <script type="text/javascript">
-
+    $(".ui.dropdown").dropdown({
+        on: "hover"
+    });
     $(function () {
         getUserInfo();
     });
@@ -171,14 +173,14 @@
             dataType: "json",
             contentType: "application/json;charset=UTF-8",
             async: false,
-            success: function (data) {
+            success: function (result) {
                 layer.closeAll();
-                if (data.code === 203) {
+                if (result.code === 203) {
                     layer.msg("用户信息已经变更请重新登录", {time: 1000}, function () {
                         window.location.replace("/admin/login.html") ;
                     });
                 } else {
-                    layer.msg(data.message);
+                    layer.msg(result.msg);
                 }
             },
             error: function (obj) {
