--- a/src/main/resources/pages/p/index.html
+++ b/src/main/resources/pages/p/index.html
@@ -67,7 +67,7 @@
                             <h3 class="ui teal header">博客</h3>
                         </div>
                         <div class="right aligned column">
-                            共 <h2 class="ui orange header m-inline-block m-text-thin">39</h2> 篇
+                            共 <h2 id="blog-total" class="ui orange header m-inline-block m-text-thin">999</h2> 篇
                         </div>
                     </div>
                 </div>
@@ -339,6 +339,7 @@
 <script src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>
 <script type="text/javascript">
     $(function () {
+        browser();
         init();
     });
 
@@ -389,6 +390,7 @@
         var blogs = obj.records;
         //数据总数
         var total = obj.total;
+        $("#blog-total").text(total);
         //计算当前页的数据量
         console.log(blogs.length);
         //当前页
@@ -397,9 +399,12 @@
         var pages = obj.pages;
         var page_content = '';//当前页内容
         $.each(blogs, function (index, val) {
-            page_content += '<div class="ui padded  segment m-padded-tb-2em m-mobile-clear m-card"><div class="ui middle aligned mobile reversed stackable grid"><div class="eleven wide column"> <h3 class="ui header"><a href="/blog/53" target="_blank" class="m-black">'
+            let blogUrl =  "/p/blog.html?Bid="+val.id;
+            page_content += '<div class="ui padded  segment m-padded-tb-2em m-mobile-clear m-card"><div class="ui middle aligned mobile reversed stackable grid"><div class="eleven wide column"> <h3 class="ui header"><a href="'
+                +blogUrl
+                +'" target="_blank" class="m-black">'
                 + val.title
-                + '</a></h3><p class="m-text"><a href="/blog/53" data-pjax="" class="m-black">'
+                + '</a></h3><p class="m-text"><a href="'+blogUrl+'" data-pjax="" class="m-black">'
                 + val.description
                 + '</a></p><div class="ui grid"><div class="eleven wide column"><div class="ui mini horizontal link list"><div class="item"><img src="'
                 + val.user.avatar
@@ -411,7 +416,7 @@
                 + val.views
                 + '</span></div></div></div><div class="right aligned four wide column"><a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin">'
                 + val.type.name
-                + '</a> </div></div></div> <div class="five wide column"><a href="/blog/53" target="_blank"> <img src="'
+                + '</a> </div></div></div> <div class="five wide column"><a  href="'+blogUrl+'"  target="_blank"> <img src="'
                 + val.firstPicture
                 + '" class="ui rounded image"></a></div></div></div>';
         });
