--- a/src/main/resources/pages/p/tags.html
+++ b/src/main/resources/pages/p/tags.html
@@ -64,7 +64,7 @@
                     <h3 class="ui  header">标签</h3>
                 </div>
                 <div class="right aligned column ">
-                    共<h2 class="ui orange header m-inline-block m-text-thin" th:text="${#arrays.length(tags)}"> 14 </h2>
+                    共<h2  class="ui orange header m-inline-block m-text-thin" ><span id="tag-total">999</span>  </h2>
                     个
                 </div>
             </div>
@@ -226,7 +226,7 @@
 <script src="/js/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 <script src="/lib/layer/layer.js"></script>
-<script src="/js/snowFall.js"></script>
+<!--<script src="/js/snowFall.js"></script>-->
 <script src="/js/showTime.js"></script>
 <!--comment.js-->
 <script type="text/javascript" src="/js/common.js"></script>
@@ -250,6 +250,7 @@
 
     function setTags(obj) {
         let tagList = "";
+        $("#tag-total").text(obj.length);
         $.each(obj, function (index, val) {
             tagList += '<a  onclick="getBlogs('
                 + 1 + ',' + null + ',' + val.id
@@ -298,9 +299,10 @@
                     + tag.name
                     + '</a>';
             });
-            page_content += '<div class="ui padded  segment m-padded-tb-2em m-mobile-clear m-card"><div class="ui middle aligned mobile reversed stackable grid"><div class="eleven wide column"> <h3 class="ui header"><a href="/blog/53" target="_blank" class="m-black">'
+            let blogUrl =  "/p/blog.html?Bid="+val.id;
+            page_content += '<div class="ui padded  segment m-padded-tb-2em m-mobile-clear m-card"><div class="ui middle aligned mobile reversed stackable grid"><div class="eleven wide column"> <h3 class="ui header"><a href="'+blogUrl+'" target="_blank" class="m-black">'
                 + val.title
-                + '</a></h3><p class="m-text"><a href="/blog/53" data-pjax="" class="m-black">'
+                + '</a></h3><p class="m-text"><a href="'+blogUrl+'" data-pjax="" class="m-black">'
                 + val.description
                 + '</a></p><div class="ui grid"><div class="row"><div class="eleven wide column"><div class="ui mini horizontal link list"><div class="item"><img src="'
                 + val.user.avatar
@@ -314,7 +316,7 @@
                 + val.type.name
                 + '</a> </div></div><div class="row"><div class="column">'
                 + tags +
-                '</div></div></div></div> <div class="five wide column"><a href="/blog/53" target="_blank"> <img src="'
+                '</div></div></div></div> <div class="five wide column"><a href="'+blogUrl+'" target="_blank"> <img src="'
                 + val.firstPicture
                 + '" class="ui rounded image"></a></div></div></div>';
         });
