--- a/src/main/resources/pages/p/types.html
+++ b/src/main/resources/pages/p/types.html
@@ -64,7 +64,7 @@
                     <h3 class="ui header">分类</h3>
                 </div>
                 <div class="right aligned column ">
-                    共<h2 class="ui orange header m-inline-block m-text-thin"><span>14</span></h2>个
+                    共<h2  class="ui orange header m-inline-block m-text-thin"><span id="type-total">999</span></h2>个
                 </div>
             </div>
         </div>
@@ -219,7 +219,6 @@
 <script src="/js/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 <script src="/lib/layer/layer.js"></script>
-<script src="/js/snowFall.js"></script>
 <script src="/js/showTime.js"></script>
 <!--comment.js-->
 <script type="text/javascript" src="/js/common.js"></script>
@@ -235,14 +234,13 @@
         browser();
         init();
     });
-
     function init() {
         show_date_time();
         getTypes();
     }
-
     function setTypes(obj) {
         let typeList = "";
+        $("#type-total").text(obj.length);
         $.each(obj, function (index, val) {
             typeList += '<div class="ui labeled button m-margin-tb-tiny m-card-mod" tabIndex="0" >'
                 + '<a class="ui black button" onclick="getBlogs('
@@ -254,7 +252,6 @@
                 + val.blogCount
                 + '</span> </div></div>';
         });
-
         $("#typeList").html(typeList);
         let typeId = getUrl("typeId");
         if (typeId == null || typeId.length == 0) {
@@ -278,10 +275,12 @@
         //总页数
         var pages = obj.pages;
         var page_content = '';//当前页内容
+
         $.each(blogs, function (index, val) {
-            page_content += '<div class="ui padded  segment m-padded-tb-2em m-mobile-clear m-card"><div class="ui middle aligned mobile reversed stackable grid"><div class="eleven wide column"> <h3 class="ui header"><a href="/blog/53" target="_blank" class="m-black">'
+            let blogUrl =  "/p/blog.html?Bid="+val.id;
+            page_content += '<div class="ui padded  segment m-padded-tb-2em m-mobile-clear m-card"><div class="ui middle aligned mobile reversed stackable grid"><div class="eleven wide column"> <h3 class="ui header"><a href="'+blogUrl+'" target="_blank" class="m-black">'
                 + val.title
-                + '</a></h3><p class="m-text"><a href="/blog/53" data-pjax="" class="m-black">'
+                + '</a></h3><p class="m-text"><a href="'+blogUrl+'" data-pjax="" class="m-black">'
                 + val.description
                 + '</a></p><div class="ui grid"><div class="eleven wide column"><div class="ui mini horizontal link list"><div class="item"><img src="'
                 + val.user.avatar
@@ -293,7 +292,7 @@
                 + val.views
                 + '</span></div></div></div><div class="right aligned four wide column"><a href="#" target="_blank" class="ui teal basic label m-padded-tiny m-text-thin">'
                 + val.type.name
-                + '</a> </div></div></div> <div class="five wide column"><a href="/blog/53" target="_blank"> <img src="'
+                + '</a> </div></div></div> <div class="five wide column"><a href="'+blogUrl+'" target="_blank"> <img src="'
                 + val.firstPicture
                 + '" class="ui rounded image"></a></div></div></div>';
         });
@@ -325,7 +324,6 @@
         }
         $("#pageLR").html(page_LR);
     };
-
 
 </script>
 
