完善页面样式+springboot缓存

--- a/src/main/resources/pages/p/blog.html
+++ b/src/main/resources/pages/p/blog.html
@@ -138,7 +138,7 @@
         </div>
         <div class="ui attached segment">
             <!-- fluid 让整个自适应-->
-            <img id="blog-firstPicture" src="/images/男人背影图.jpg" style="min-height: 300px; max-height: 600px;"
+            <img id="blog-firstPicture" src="" style="min-height: 300px; max-height: 600px;"
                  class="ui fluid rounded image">
         </div>
         <div class="ui  attached padded segment">
@@ -146,8 +146,7 @@
             <div class="ui right aligned basic segment">
                 <div id="blog-flag" class="ui orange basic label">原创</div>
             </div>
-            <h2 id="blog-title" class="ui center aligned header">两年练习生的长长短短</h2>
-
+            <h2 id="blog-title" class="ui center aligned header">题目加载中...</h2>
             <div id="markdown-toc-list" class="no" style="width: 252px;
                     height: 100%;
                  position: fixed;
