--- a/src/main/resources/pages/back/blog-input.html
+++ b/src/main/resources/pages/back/blog-input.html
@@ -122,14 +122,14 @@
 
                 <div class="field">
                     <div class="ui checkbox">
-                        <input type="checkbox" id="shareStatement" name="shareStatement"
+                        <input type="checkbox" checked id="shareStatement" name="shareStatement"
                                class="hidden">
                         <label for="shareStatement">转载声明</label>
                     </div>
                 </div>
                 <div class="field">
                     <div class="ui checkbox">
-                        <input type="checkbox" id="appreciation" name="appreciation"
+                        <input type="checkbox"  id="appreciation" name="appreciation"
                                class="hidden">
                         <label for="appreciation">赞赏</label>
                     </div>
@@ -148,10 +148,9 @@
                     <label class="ui teal basic label">首图</label>
                     <input type="text" name="firstPicture"
                            placeholder="首图引用地址 https://tenapi.cn/acg">
-
                 </div>
-                <span class="m-text" style="background-color: whitesmoke;">首图参考: </span><a href="https://tenapi.cn/acg"
-                                                                                           target="_blank">https://tenapi.cn/acg</a>
+                <span class="m-text" style="background-color: whitesmoke;">首图参考: <a href="https://tenapi.cn/acg"
+                                                                                    target="_blank">https://tenapi.cn/acg</a></span>
             </div>
             <div class="required field">
                 <textarea name="description" placeholder="博客描述..."
