--- a/src/main/resources/pages/p/about.html
+++ b/src/main/resources/pages/p/about.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="ui attached segment">
                     <p class="m-text">学习，永无止境。</p>
-                    <p class="m-text">（本项目以开源。长期维护，欢迎大佬们指导)<a target="_blank" href="https://gitee.com/zhao--ruiyu/spring-boot-blog-master">gitee地址</a></p>
+                    <p class="m-text">（本项目已开源。长期维护，欢迎大佬们指导)<a target="_blank" href="https://gitee.com/zhao--ruiyu/spring-boot-blog-master">gitee地址</a></p>
                 </div>
                 <div class="ui attached segment">
                     <div class="ui orange basic left pointing label">编程</div>
