--- a/src/main/resources/pages/p/tags.html
+++ b/src/main/resources/pages/p/tags.html
@@ -88,61 +88,10 @@
             </a>
         </div>
 
-        <div id="blogPage" class="ui top attached segment  m-back-grass-deep   m-border-radius animated fadeInUp">
-            <!--            <div class="ui padded  segment m-padded-tb-2em m-mobile-clear m-card" th:each="blog : ${pageInfo.list}">-->
-            <!--                <div class="ui mobile reversed stackable grid">  &lt;!&ndash;mobile reversed  手机反转&ndash;&gt;-->
-            <!--                    <div class="eleven wide column">-->
-            <!--                        <h3 class="ui header"><a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank"-->
-            <!--                                                 class="m-black" th:text="${blog.title}">你真的理解什么是财富自由吗?</a></h3>-->
-            <!--                        <p class="m-text" th:text="|${blog.description}....|"> 滴哦是是你都i送i你都弄上那你nsdin第四卷第是-->
-            <!--                        </p>-->
-            <!--                        <div class="ui grid">-->
-            <!--                            <div class="row">-->
-            <!--                                <div class="eleven wide column">-->
-            <!--                                    <div class="ui mini horizontal link list">-->
-            <!--                                        <div class="item">-->
-            <!--                                            <img src="https://unsplash.it/100/100?image=1005"-->
-            <!--                                                 th:src="@{${blog.user.avatar}}" alt=""-->
-            <!--                                                 class="ui avatar image">-->
-            <!--                                            &lt;!&ndash;在后面添加一些文字 content&ndash;&gt;-->
-            <!--                                            <div class="content">-->
-            <!--                                                <a class="header" th:text="${blog.user.nickname}">-->
-            <!--                                                    赵睿宇-->
-            <!--                                                </a>-->
-            <!--                                            </div>-->
-            <!--                                        </div>-->
-            <!--                                        <div class="item">-->
-            <!--                                            <i class="calendar icon"></i> <span-->
-            <!--                                                th:text="${#dates.format(blog.updateTime,'yyyy-MM-dd')}">2021-9-01</span>-->
-            <!--                                        </div>-->
-            <!--                                        <div class="item">-->
-            <!--                                            <i class="eye icon"></i><span th:text="${blog.views}">220</span>-->
-            <!--                                        </div>-->
-            <!--                                    </div>-->
-            <!--                                </div>-->
-            <!--                                <div class="right aligned five wide column">-->
-            <!--                                    <a href="#" class="ui teal basic label m-padded-03em" th:text="${blog.type.name}">简直offer</a>-->
-            <!--                                </div>-->
-            <!--                            </div>-->
-            <!--                            <div class="row">-->
-            <!--                                <div class="column" >-->
-            <!--                                    <a href="#" th:href="@{/tags/{id}(id=${tag.id})}"-->
-            <!--                                       class="ui  basic left pointing label m-padded-mini m-text-thin"-->
-            <!--                                       th:classappend="${tag.id==activeTagId} ? 'teal'" th:each="tag : ${blog.tags}"-->
-            <!--                                       th:text="${tag.name}">方法论</a>-->
-            <!--                                </div>-->
-            <!--                            </div>-->
-            <!--                        </div>-->
-            <!--                    </div>-->
-
-            <!--                    <div class="five wide column">-->
-            <!--                        <a href="#" th:href="@{/blog/{id}(id=${blog.id})}" target="_blank">-->
-            <!--                            <img src="https://unsplash.it/800/450?image=1005"  th:src="@{${blog.firstPicture}}" alt=""-->
-            <!--                                 class="ui rounded image">-->
-            <!--                        </a>-->
-            <!--                    </div>-->
-            <!--                </div>-->
-            <!--            </div>-->
+        <div id="blogPage" class="ui top attached segment m-back-grass-deep  m-border-radius animated fadeInUp">
+            <!-- 做个填充-->
+            <div style="min-height: 200px"></div><h1 class="ui center aligned header" >猫喵喵提示：does not exist</h1>
+            <div style="min-height: 200px"></div>
         </div>
         <div class="ui bottom attached segment" th:if="${pageInfo.total}>1">
             <div id="pageLR" class="ui middle aligned two column grid">
@@ -284,7 +233,6 @@
         let tagId = $("[name='tagId']").val();
         var page_content = '';//当前页内容
         $.each(blogs, function (index, val) {
-
             let tags = "";
             $.each(val.tags, function (i, tag) {
                 let c = "";
@@ -300,7 +248,7 @@
                     + '</a>';
             });
             let blogUrl =  "/p/blog.html?Bid="+val.id;
-            page_content += '<div class="ui padded  segment m-padded-tb-2em m-mobile-clear m-card"><div class="ui middle aligned mobile reversed stackable grid"><div class="eleven wide column"> <h3 class="ui header"><a href="'+blogUrl+'" target="_blank" class="m-black">'
+            page_content += '<div class="ui padded  segment m-padded-tb-2em m-mobile-clear m-card "><div class="ui middle aligned mobile reversed stackable grid"><div class="eleven wide column"> <h3 class="ui header"><a href="'+blogUrl+'" target="_blank" class="m-black">'
                 + val.title
                 + '</a></h3><p class="m-text"><a href="'+blogUrl+'" data-pjax="" class="m-black">'
                 + val.description
