--- a/src/main/resources/pages/p/types.html
+++ b/src/main/resources/pages/p/types.html
@@ -93,52 +93,9 @@
 
         </div>
         <div id="blogPage" class="ui top attached segment m-border-radius  m-back-grass-deep animated fadeInUp">
-            <!--            <div class="ui padded segment m-padded-tb-2em m-mobile-clear m-card">-->
-            <!--                <div class="ui mobile reversed stackable grid">  &lt;!&ndash;mobile reversed  手机反转&ndash;&gt;-->
-            <!--                    <div class="eleven wide column">-->
-            <!--                        <h3 class="ui header"><a href="#" href="/blog/{id}(id=${blog.id})" target="_blank"-->
-            <!--                                                 class="m-black" th:text="${blog.title}">你真的理解什么是财富自由吗?</a></h3>-->
-            <!--                        <p class="m-text">滴哦是是你都i送i你都弄上那你nsdin第四卷第是-->
-            <!--                            是你都i送i你都弄是你都i送i你都弄是你都i送i你都弄是你都i送i你都弄是你都i送i你都弄-->
-            <!--                            是你都i送i你都弄是你都i送i你都弄-->
-            <!--                        </p>-->
-            <!--                        <div class="ui grid">-->
-            <!--                            <div class="eleven wide column">-->
-            <!--                                <div class="ui mini horizontal link list">-->
-            <!--                                    <div class="item">-->
-            <!--                                        <img src="https://unsplash.it/100/100?image=1005"-->
-            <!--                                             src="user.avatar" alt=""-->
-            <!--                                             class="ui avatar image">-->
-            <!--                                        &lt;!&ndash;在后面添加一些文字 content&ndash;&gt;-->
-            <!--                                        <div class="content">-->
-            <!--                                            <a class="header">-->
-            <!--                                                赵睿宇-->
-            <!--                                            </a>-->
-            <!--                                        </div>-->
-            <!--                                    </div>-->
-            <!--                                    <div class="item">-->
-            <!--                                        <i class="calendar icon"></i> <span>2021-9-01</span>-->
-            <!--                                    </div>-->
-            <!--                                    <div class="item">-->
-            <!--                                        <i class="eye icon"></i> <span>220</span>-->
-            <!--                                    </div>-->
-            <!--                                </div>-->
-            <!--                            </div>-->
-            <!--                            <div class="right aligned five wide column">-->
-            <!--                                <a href="#" class="ui teal basic label m-padded-03em">简直offer</a>-->
-            <!--                            </div>-->
-            <!--                        </div>-->
-            <!--                    </div>-->
-
-
-            <!--                    <div class="five wide column">-->
-            <!--                        <a href="#" href="" target="_blank">-->
-            <!--                            <img src="https://unsplash.it/800/450?image=1005" src="" alt=""-->
-            <!--                                 class="ui rounded image">-->
-            <!--                        </a>-->
-            <!--                    </div>-->
-            <!--                </div>-->
-            <!--            </div>-->
+              <!-- 做个填充-->
+            <div style="min-height: 200px"></div><h1 class="ui center aligned header" >猫喵喵提示：does not exist</h1>
+            <div style="min-height: 200px"></div>
         </div>
         <div class="ui bottom attached segment">
             <div id="pageLR" class="ui middle aligned two column grid">
@@ -274,8 +231,7 @@
         let current = obj.current;
         //总页数
         var pages = obj.pages;
-        var page_content = '';//当前页内容
-
+        var page_content;//当前页内容
         $.each(blogs, function (index, val) {
             let blogUrl =  "/p/blog.html?Bid="+val.id;
             page_content += '<div class="ui padded  segment m-padded-tb-2em m-mobile-clear m-card"><div class="ui middle aligned mobile reversed stackable grid"><div class="eleven wide column"> <h3 class="ui header"><a href="'+blogUrl+'" target="_blank" class="m-black">'
