大致剩下评论功能了

--- a/src/main/resources/pages/p/blog.html
+++ b/src/main/resources/pages/p/blog.html
@@ -72,7 +72,7 @@
         }
     </style>
 </head>
-<body class="m-back-img3">
+<body class="m-back-img2">
 <nav class="animated fadeInDown m-back-grass m-fixed-w">
     <div class="ui container">
         <div class="ui inverted secondary stackable  menu">  <!--stackable 可堆叠的 应用在移动端-->
@@ -436,7 +436,7 @@
 <!-- require MetingJS -->
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/meting@2/dist/Meting.min.js"></script>
 <script type="text/javascript">
-
+    //关于侧边栏目录的
     $(".contents-show").click(function (){
         $("#markdown-toc-list").toggleClass("no");
         $("#markdown-toc-list").toggleClass("animated fadeIn");
