--- a/src/main/resources/pages/p/index.html
+++ b/src/main/resources/pages/p/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/style.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aplayer/dist/APlayer.min.css">
 </head>
-<body class="m-back-img5">
+<body class="m-back-img2">
 
 <nav class="animated fadeInDown m-back-grass m-fixed-w">
     <div class="ui container">
@@ -76,12 +76,10 @@
                     <div class="ui padded segment m-padded-tb-2em m-mobile-clear m-card">
                         <div class="ui middle aligned mobile reversed stackable grid">
                             <div class="eleven wide column">
-                                <h3 class="ui header"><a href="/blog/53" target="_blank" class="m-black">ZooKeeper</a>
+                                <h3 class="ui header"><a href="" target="_blank" class="m-black">加载中</a>
                                 </h3>
-                                <!--<p class="m-text" th:text="|${blog.description}......|">1正确做好任何一件事情的前提是清晰、正确的理解目标。而事实是，我们很多人很多时候根本没有对目标正确的定义，甚至根本从来就没有想过，只是大家都那么做而已…...</p>-->
-                                <p class="m-text"><a href="/blog/53" data-pjax="" class="m-black">Zookeeper
-                                    分布式服务框架是Apache Hadoop
-                                    的一个子项目，它主要是用来解决分布式应用中经常遇到的一些数据管理问题，如：分布式注册中心，分布式锁，统一命名服务、状态同步服务、集群管理、分布式应用配置项的管理等等......</a>
+                                <p class="m-text"><a href="/blog/53" data-pjax="" class="m-black">加载中
+                                    ......</a>
                                 </p>
                                 <div class="ui grid">
                                     <div class="eleven wide column">
@@ -101,13 +99,13 @@
                                     </div>
                                     <div class="right aligned four wide column">
                                         <a href="#" target="_blank"
-                                           class="ui teal basic label m-padded-tiny m-text-thin">java框架</a>
+                                           class="ui teal basic label m-padded-tiny m-text-thin">加载中</a>
                                     </div>
                                 </div>
                             </div>
                             <div class="four wide column">
-                                <a href="/blog/53" target="_blank">
-                                    <img src="http://cdn.xiongsihao.com/blogFirstPicture53.jpg" alt=""
+                                <a href="" target="_blank">
+                                    <img src="" alt=""
                                          class="ui rounded image">
                                 </a>
                             </div>
